# Email-Summary-Agent

./: .gitignore  Dockerfile  README.md  contacts.db  email_agent.db  pyproject.toml  requirements.txt
.pytest_cache/: .gitignore
.pytest_cache/v/cache/: nodeids
data/: Sample1.eml
src/: email_agent.db
src/email_summarizer/: _gmail_setup.py  classifier.py  cli.py  contact_manager.py  db.py  demo_summary.py  fetcher.py  models.py  orchestrator.py  outlook_fetcher.py  outlook_setup.py  parser.py  service.py  summarizer.py  utils.py
src/email_summarizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/tests/: test_classifier.py  test_parser.py  test_summarizer.py
